xml loading works

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -38,13 +38,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/play" />
+            android:text="@string/load" />
     </LinearLayout>
 
     <EditText
         android:id="@+id/debug_hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/canvas"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:ems="10" >
